--- a/app/src/main/res/layout/content_order_table.xml
+++ b/app/src/main/res/layout/content_order_table.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation="5dp"
+    app:cardBackgroundColor="@color/state_backgroud"
     app:cardUseCompatPadding="true">
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +14,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right">
+            android:background="@color/colorSecondaryDark"
+            android:gravity="right"
+            android:paddingRight="10dp">
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="예약"/>
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recyclerCall"
@@ -78,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="접수"/>
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recycler1"/>
@@ -94,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="진료중"/>
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recycler2"/>
@@ -110,7 +113,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="진료완료"/>
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recycler3"/>
@@ -126,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="수납완료"/>
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recycler4"/>
@@ -136,4 +139,4 @@
 
 
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
