--- a/app/src/main/res/layout/content_wait_table.xml
+++ b/app/src/main/res/layout/content_wait_table.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="@color/colorPrimarySoft"
+    app:cardBackgroundColor="@color/state_backgroud"
     app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
     <LinearLayout
@@ -45,13 +45,13 @@
                 android:text="의사"/>
 
         </LinearLayout>
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/waitRecyclerView"
             tools:listitem="@layout/wait_item">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
