--- a/app/src/main/res/layout/nv_item.xml
+++ b/app/src/main/res/layout/nv_item.xml
@@ -8,15 +8,17 @@
     android:id="@+id/cardView"
     app:cardElevation="3dp"
     android:clickable="true"
+    android:background="@drawable/button_nvlist_background"
     android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:padding="4dp">
         <TextView
-            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NS_TITLE"
@@ -24,7 +26,6 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:layout_marginTop="5dp"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="NS_NODEKEY"
