--- a/app/src/main/res/layout/order_item_call.xml
+++ b/app/src/main/res/layout/order_item_call.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
     app:cardUseCompatPadding="true"
     android:id="@+id/cardView"
-    app:cardElevation="3dp"
+    app:cardElevation="1dp"
+    app:cardBackgroundColor="@color/state_card_backgroud"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -30,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
+                android:textColor="@color/state_card_textcolor"
                 android:id="@+id/name"
                 android:textStyle="bold"/>
             <View
@@ -58,4 +60,4 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
